fix: gap 兼容

--- a/themes/water/source/css/_partials/header.less
+++ b/themes/water/source/css/_partials/header.less
@@ -9,9 +9,11 @@
         .header-menu{
             list-style: none;
             display: flex;  
-            column-gap: 0ch;
-            gap: 16px;
             align-items: center;
+            margin: 0 -16px;
+            &-item{
+                padding: 0 8px;
+            }
         }
     }
 }
