--- a/themes/water/source/css/_partials/pagination.less
+++ b/themes/water/source/css/_partials/pagination.less
@@ -2,12 +2,14 @@
     display: flex;
     text-align: center;
     justify-content: center;
-    gap: 20px;
+
 
     &-prev,&-next{
         width: 24px;
         height: 24px;
+        margin: 0 20px;
         background-size: contain;
+        background-repeat: no-repeat;
         a{
 
             width: 24px;
@@ -16,6 +18,7 @@
         }
     }
     &-content{
+        padding: 0 20px;
         text-align: center;
     }
 }
