--- a/themes/water/source/css/reset.less
+++ b/themes/water/source/css/reset.less
@@ -18,7 +18,7 @@ a,a:active,a:visited{
     text-decoration: underline;
 }
 a:hover{
-    text-decoration: underline wavy;
+    text-decoration-style: wavy;
 }
 
 blockquote{
